Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.2.4, 6.3.0, 6.4.0 Beta1
-
Fix Version/s: 6.2.5, 6.4.0 RC1, 6.5.0 Beta1
-
Component/s: Build tools: qmake, Qt3D
-
Labels:
-
Platform/s:
-
Commits:57fbc3b60f (qt/qt3d/dev) 57fbc3b60f (qt/tqtc-qt3d/dev) 9a112d18cf (qt/qt3d/6.4) 9a112d18cf (qt/tqtc-qt3d/6.4) c2ac8dc923 (qt/tqtc-qt3d/6.2) dd12c79bc2 (qt/qt3d/6.3) dd12c79bc2 (qt/tqtc-qt3d/6.3)
Description
Hello,
When attempting to run some Qt3D examples for IOS simulator, I have noticed some errors which don't make much sense. Qt does not seem to find a static plugin for the module "Qt3D.Core" (see full error message below). This appears to be a bug as this error is not present when simply running for MacOS.
Also, I created a very simple example which imports "Qt3D.Core 2.0" and attempted to run this using Qt 5.15.8 for IOS Simulator and did not receive the error either. However, I still see this error when trying to run this simple example for Qt 6.2.4.
For this reason this issue seems to have appeared in more recent version of Qt. I have attached the simple example I was using to generate the error.
Error message:
qrc:/SolarSystem.qml:52:1: static plugin for module "Qt3D.Core" with name "Qt3DQuick3DCorePlugin" cannot be loaded: module "Qt3D.Core" version 2.0 is not installed
import Qt3D.Core 2.0