src/quick3d/imports/core/qt3dquick3dcoreplugin.cpp
@@ -64,6 +64,16 @@
 
 QT_BEGIN_NAMESPACE
 
+extern void qml_register_types_Qt3D_Core();
+Q_GHS_KEEP_REFERENCE(qml_register_types_Qt3D_Core);
+
+Qt3DQuick3DCorePlugin::Qt3DQuick3DCorePlugin(QObject *parent)
+    : QQmlExtensionPlugin(parent)
+{
+    volatile auto registration = &qml_register_types_Qt3D_Core;
+    Q_UNUSED(registration);
+}
+
 void Qt3DQuick3DCorePlugin::registerTypes(const char *uri)
 {
     Q_UNUSED(uri);
